--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Охотники за приведениями: Наследники</title>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;700;900&display=swap" rel="stylesheet"> 
   <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/swiper.min.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -186,28 +187,48 @@
   <section class="news">
     <div class="container">
       <h2 class="section-title section-news-title">Новости по теме</h2>
-      <div class="news-cards">
-        <div class="news-card">
-          <span class="news-date">31 марта 2020</span>
-          <h3 class="news-title">«Морбиуса» и «Охотников за привидениями» перенесли на следующий год</h3>
-        </div>
-        <div class="news-card">
-          <span class="news-date">9 декабря 2019</span>
-          <h3 class="news-title">Наследники: Вышел дебютный трейлер новых «Охотников за привидениями»</h3>
-        </div>
-        <div class="news-card">
-          <span class="news-date">11 ноября 2019</span>
-          <h3 class="news-title">Новые «Охотники за привидениями» обзавелись названием</h3>
-        </div>
-        <div class="news-card">
-          <span class="news-date">19 октября 2019</span>
-          <h3 class="news-title">Завершились съёмки новых «Охотников за привидениями»</h3>
-        </div>
+            <!-- Slider main container -->
+      <div class="swiper-container">
+          <!-- Additional required wrapper -->
+          <div class="swiper-wrapper">
+              <!-- Slides -->
+              <div class="swiper-slide">
+                <div class="news-card">
+                  <span class="news-date">31 марта 2020</span>
+                  <h3 class="news-title">«Морбиуса» и «Охотников за привидениями» перенесли на следующий год</h3>
+                </div>
+              </div>
+              <!--/.swper-slide-->
+              <div class="swiper-slide">
+                <div class="news-card">
+                  <span class="news-date">9 декабря 2019</span>
+                  <h3 class="news-title">Наследники: Вышел дебютный трейлер новых «Охотников за привидениями»</h3>
+                </div>
+              </div>
+              <!--/.swper-slide-->
+              <div class="swiper-slide">
+                <div class="news-card">
+                  <span class="news-date">11 ноября 2019</span>
+                  <h3 class="news-title">Новые «Охотники за привидениями» обзавелись названием</h3>
+                </div>
+              </div>
+              <!--/.swper-slide-->
+              <div class="swiper-slide">
+                <div class="news-card">
+                  <span class="news-date">19 октября 2019</span>
+                  <h3 class="news-title">Завершились съёмки новых «Охотников за привидениями»</h3>
+                </div>
+              </div>
+              <!--/.swper-slide-->
+              ...
+          </div>
 
       </div>
-      <!-- /.news-card -->
+
     </div>
   </section>
-  
+  <script src="js/jquery-3.5.1.min.js"></script>
+  <script src="js/swiper.min.js"></script>
+  <script src="js/main.js"></script>
 </body>
 </html>
